--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="main-content">
-                <p class="content-item"> Home </p>
+                <p class="content-item"> Home #2 </p>
             </div>
         </main>
 
