--- a/Map.html
+++ b/Map.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="main-content">
-                <p class="content-item"> map </p>
+                <p class="content-item"> hello world </p>
             </div>
         </main>
 
