--- a/Promotion.html
+++ b/Promotion.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="main-content">
-                <p class="content-item"> Promotion  </p>
+                <p class="content-item"> Promotion #1  </p>
             </div>
         </main>
 
