--- a/index.html
+++ b/index.html
@@ -88,13 +88,118 @@
                 </div>
             </div>
 
-            <div class="main-content">
-                <p class="content-item"> Home #2 </p>
+            <div class="home-content">
+                <div class="first">
+                    <p class="title"> Universal Spectacle Night Parade </p>
+
+                    <hr width="80%" class="line">
+
+                    <p style="font-size: 2vw;">
+                        <b>This enhanced parade brings new dimensions to life!</b>
+
+                    <p style="font-size: 1vw; margin-bottom: 50px;">
+                        Immerse yourself in this revolutionary parade! Experience the up-close excitement from the <br>
+                        world of Harry Potter, witness the world's first transforming float from the universe of <br>
+                        Transformers, feel the fury of the dinosaurs as you journey into Jurassic World, and encounter <br>
+                        Minion Mayhem as the street turns into a Minions disco party.
+                    </p>
+
+                    <table width="90%" height="30%" class="image-table">
+                        <tr>
+                            <td width="33%" height="100%" style="padding-right: 5px">
+                                <img src="img/news1-1.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="33%" height="100%" style="padding-right: 5px">
+                                <img src="img/news1-2.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="33%" height="100%">
+                                <img src="img/news1-3.jpg" width="100%" height="50%">
+                            </td>
+                        </tr>
+                    </table>
+
+                    <button class="btn btn-lg btn-primary btn-embossed default-width push">Read more</button>
+                </div>
+
+                <div class="second">
+                    <p class="title"> Attack on Titan XR Ride <br> and Survey Corps Mess Hall </p>
+
+                    <hr width="80%" size="10" class="line">
+
+                    <p style="font-size: 2vw;">
+                        <b>Flee for your life at mind-boggling speeds through a world of despair!</b>
+                    </p>
+
+                    <p style="font-size: 1vw; margin-bottom: 50px;">
+                        Feel the terror of a Titan attack! XR technology sends you flying through the grim world of Attack on Titan. <br>
+                        The Survey Corps is here with Mobility Gear to support! <br>
+                        Experience the intense G-force of a roller coaster in a world of despair on this one-of-a-kind Attack on Titan attraction.
+                    </p>
+
+                    <table width="90%" height="30%" class="image-table">
+                        <tr>
+                            <td width="25%" height="100%" style="padding-right: 5px">
+                                <img src="img/news2-1.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="25%" height="100%" style="padding-right: 5px">
+                                <img src="img/news2-2.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="25%" height="100%" style="padding-right: 5px">
+                                <img src="img/news2-3.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="25%" height="100%">
+                                <img src="img/news2-4.jpg" width="100%" height="50%">
+                            </td>
+                        </tr>
+                    </table>
+
+                    <button class="btn btn-lg btn-primary btn-embossed default-width push">Read more</button>
+                </div>
+
+                <div class="third">
+                    <p class="title"> Detective Conan: The World </p>
+
+                    <hr width="80%" size="10" class="line">
+
+                    <p style="font-size: 2vw;">
+                        <b>Conan faces his biggest challenge yet and needs your help!</b>
+                    </p>
+
+                    <p style="font-size: 1vw; margin-bottom: 50px;">
+                        Conan fans rejoice! This year features 4 all-new experiences starring the world's littlest genius detective. Tackle puzzles with Conan and <br>
+                        Akai to survive against all odds in Detective Conan: The Escape. Feel the rush of an FBI car chase in a brand-new audio adventure, <br>
+                        Detective Conan x Hollywood Dream - The Ride. Become a full-fledged detective to help Heiji in Detective Conan Mystery Challenge. <br>
+                        And team up with Amuro to crack a case at the Detective Conan Mystery Restaurant.
+                    </p>
+
+                    <table width="90%" height="30%" class="image-table">
+                        <tr>
+                            <td width="33%" height="100%" style="padding-right: 5px">
+                                <img src="img/news3-1.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="33%" height="100%" style="padding-right: 5px">
+                                <img src="img/news3-2.jpg" width="100%" height="50%">
+                            </td>
+
+                            <td width="33%" height="100%" style="padding-right: 5px">
+                                <img src="img/news3-3.jpg" width="100%" height="50%">
+                            </td>
+                        </tr>
+                    </table>
+
+                    <button class="btn btn-lg btn-primary btn-embossed default-width push">Read more</button>
+                </div>
             </div>
         </main>
 
         <!-- Footer -->
-        <footer class="footer push">
+        <footer class="footer">
             <div class="footer-custom">
                 <p class="footer-item"> Footer </p>
             </div>
@@ -112,11 +217,9 @@
 
         <script src="js/smooth-scroll.js"></script>
 
-        <!--
         <script>
-            var scroll = new SmoothScroll('a[href*="#"]', { speed: 300, speedAsDuration: true });
+            //var scroll = new SmoothScroll('a[href*="#"]', { speed: 300, speedAsDuration: true });
         </script>
-        -->
 
         <script>
             // If user clicks anywhere outside of the modal, Modal will close
