--- a/Map.html
+++ b/Map.html
@@ -11,7 +11,10 @@
 
         <link rel="stylesheet" href="css/style.css">
 
+        <link rel="stylesheet" href="css/Map.css">
+
         <link rel="icon" href="favicon.png">
+
     </head>
 
     <body>
@@ -89,12 +92,16 @@
             </div>
 
             <div class="main-content">
-                <p class="content-item"> hello world </p>
+                <div id="titletext"><u>Studio Map</u></div>
+
+            </div>
+            <div class="map-content" align="center" >
+                <img src="img/Map.jpg"  id="mapimage" >
             </div>
         </main>
 
         <!-- Footer -->
-        <footer class="footer push">
+        <footer class="footer">
             <div class="footer-custom">
                 <p class="footer-item"> Footer </p>
             </div>
@@ -127,19 +134,6 @@
                     modal.style.display = "none";
                 }
             }
-        </script>
-
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-        <ins class="adsbygoogle"
-             style="display:block; text-align:center;"
-             data-ad-layout="in-article"
-             data-ad-format="fluid"
-             data-ad-client="ca-pub-7013552742369373"
-             data-ad-slot="5323679646"></ins>
-
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </body>
 </html>
