--- a/Map.html
+++ b/Map.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="main-content">
-                <div id="titletext"><u>Studio Map</u></div>
+                <div id="titletext">Studio Map</div>
 
             </div>
             <div class="map-content" align="center" >
